lessons/05-debugging-and-testing-pods/nginx-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-debug
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      ports:
        - containerPort: 80
