lessons/05-debugging-and-testing-pods/tester-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tester-pod
spec:
  containers:
    - name: tester
      image: nicolaka/netshoot:latest
      command:
        - bash
        - -lc
        - trap 'exit 0' TERM; while true; do sleep 1; done
