lessons/05-debugging-and-testing-pods/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-tester
spec:
  podSelector:
    matchLabels:
      app: nginx-debug
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: tester
